Oppdateringer, lagt på permisjonsId  #deploy-backend-dev